Communication Manager 기본 코드 작성

--- a/MiniProjectMissileSimulator/MiniProjectMissileSimulator.vcxproj
+++ b/MiniProjectMissileSimulator/MiniProjectMissileSimulator.vcxproj
@@ -159,7 +159,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CommunicationManager.cpp" />
     <ClCompile Include="MiniProjectMissileSimulator.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CommunicationManager.h" />
+    <ClInclude Include="msg.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
