--- a/MiniProjectMissileSimulator/MiniProjectMissileSimulator.vcxproj.filters
+++ b/MiniProjectMissileSimulator/MiniProjectMissileSimulator.vcxproj.filters
@@ -18,5 +18,16 @@
     <ClCompile Include="MiniProjectMissileSimulator.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="CommunicationManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CommunicationManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="msg.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
