--- a/MiniProjectThreatSimulator/MiniProjectThreatSimulator.vcxproj
+++ b/MiniProjectThreatSimulator/MiniProjectThreatSimulator.vcxproj
@@ -159,7 +159,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="MiniProjectThreatSimulator.cpp" />
+    <ClCompile Include="AirThreatManager.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="AirThreatManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
