--- a/MiniProjectThreatSimulator/MiniProjectThreatSimulator.vcxproj.filters
+++ b/MiniProjectThreatSimulator/MiniProjectThreatSimulator.vcxproj.filters
@@ -15,7 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MiniProjectThreatSimulator.cpp">
+    <ClInclude Include="AirThreatManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="AirThreatManager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
