1. 싱글톤으로 CommunicationManager와 AirThreatManager를 외부에서 불러올 수 있도록 하였음. 2. 상호간 호출이 필요한 부분에 대해 구현 완료.

--- a/MiniProjectThreatSimulator/MiniProjectThreatSimulator.vcxproj
+++ b/MiniProjectThreatSimulator/MiniProjectThreatSimulator.vcxproj
@@ -160,6 +160,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AirThreatManager.cpp" />
+    <ClCompile Include="CommunicationManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AirThreatManager.h" />
