--- a/MiniProjectGUI/MiniProjectGUI.vcxproj
+++ b/MiniProjectGUI/MiniProjectGUI.vcxproj
@@ -205,6 +205,7 @@
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TCCController.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CDisplayStatic.cpp" />
@@ -218,6 +219,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="TCCController.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="MiniProjectGUI.rc" />
