--- a/MiniProjectGUI/MiniProjectGUI.vcxproj.filters
+++ b/MiniProjectGUI/MiniProjectGUI.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="msg.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TCCController.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MiniProjectGUI.cpp">
@@ -63,6 +66,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="CommunicationManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TCCController.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
