공중 위협 스레드 만들어서 지속적으로 좌표 이동하고 자신의 좌표를 TCC에게 전송하도록 구현함.

--- a/MiniProjectThreatSimulator/MiniProjectThreatSimulator.vcxproj
+++ b/MiniProjectThreatSimulator/MiniProjectThreatSimulator.vcxproj
@@ -161,6 +161,7 @@
   <ItemGroup>
     <ClCompile Include="AirThreatManager.cpp" />
     <ClCompile Include="CommunicationManager.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AirThreatManager.h" />
