--- a/MiniProjectThreatSimulator/MiniProjectThreatSimulator.vcxproj.filters
+++ b/MiniProjectThreatSimulator/MiniProjectThreatSimulator.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClCompile Include="CommunicationManager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CommunicationManager.h">
