미사일매니저 / 미션매니저(깝쭉) 추가

--- a/MiniProjectMissileSimulator/MiniProjectMissileSimulator.vcxproj
+++ b/MiniProjectMissileSimulator/MiniProjectMissileSimulator.vcxproj
@@ -160,10 +160,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CommunicationManager.cpp" />
-    <ClCompile Include="MiniProjectMissileSimulator.cpp" />
+    <ClCompile Include="MissileManager.cpp" />
+    <ClCompile Include="MissionManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CommunicationManager.h" />
+    <ClInclude Include="MissileManager.h" />
+    <ClInclude Include="MissionManager.h" />
     <ClInclude Include="msg.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
