--- a/MiniProjectMissileSimulator/MiniProjectMissileSimulator.vcxproj.filters
+++ b/MiniProjectMissileSimulator/MiniProjectMissileSimulator.vcxproj.filters
@@ -15,10 +15,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="MiniProjectMissileSimulator.cpp">
+    <ClCompile Include="CommunicationManager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="CommunicationManager.cpp">
+    <ClCompile Include="MissionManager.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="MissileManager.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
@@ -27,6 +30,12 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="msg.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="MissionManager.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="MissileManager.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
