mission Manager와 missile Manager 상세 구현

--- a/MiniProjectMissileSimulator/MiniProjectMissileSimulator.vcxproj
+++ b/MiniProjectMissileSimulator/MiniProjectMissileSimulator.vcxproj
@@ -160,6 +160,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="CommunicationManager.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="MissileManager.cpp" />
     <ClCompile Include="MissionManager.cpp" />
   </ItemGroup>
