1. CommunicationManager를 상속하는 ATSCommunicationManager와 MSSCommunicationManager로 나누어 소켓을 양분함. 2. 패킷 처리 과정에서 오해를 하여 while문을 넣어서 무한루프에 빠졌던 버그 수정 3. draw 스레드를 비활성화함.

--- a/MiniProjectGUI/MiniProjectGUI.vcxproj
+++ b/MiniProjectGUI/MiniProjectGUI.vcxproj
@@ -195,6 +195,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="ATSCommunicationManager.h" />
     <ClInclude Include="CDisplayStatic.h" />
     <ClInclude Include="CommunicationManager.h" />
     <ClInclude Include="DisplayController.h" />
@@ -202,17 +203,20 @@
     <ClInclude Include="MiniProjectGUI.h" />
     <ClInclude Include="MiniProjectGUIDlg.h" />
     <ClInclude Include="msg.h" />
+    <ClInclude Include="MSSCommunicationManager.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="TCCController.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ATSCommunicationManager.cpp" />
     <ClCompile Include="CDisplayStatic.cpp" />
     <ClCompile Include="CommunicationManager.cpp" />
     <ClCompile Include="DisplayController.cpp" />
     <ClCompile Include="MiniProjectGUI.cpp" />
     <ClCompile Include="MiniProjectGUIDlg.cpp" />
+    <ClCompile Include="MSSCommunicationManager.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
